fix(styles): layout shift

--- a/components/UI/layout/layout.module.scss
+++ b/components/UI/layout/layout.module.scss
@@ -8,7 +8,6 @@
     flex-direction: row;
     justify-content: flex-start;
     max-width: 1200px;
-    height: 100%;
     margin: 0 auto;
     padding: 3em 0;
   }
